allow user to search for usernames
